# FaceRunner

./: .gitignore  FEATURES.md  README.md  pyproject.toml
src/: main.py  network_utils.py  ollama_utils.py  system_utils.py  ui_components.py
src/facerunner/: __init__.py
